# ai-sa-portfolio

./: .gitignore  Makefile  README.md  pyproject.toml
systems/s1-cost/: Dockerfile  README.md  ai-daily-digest-plan.md  architecture.md  benchmark-plan.md  blog-draft-compression-benchmark.md  blog-draft-medium.md  chat.py  enhanced_chat.py  main.py  nano-cc-plan.md  pyproject.toml  quick_demo.py  test_implementation.py
systems/s1-cost/benchmark/: llmlingua2_wrapper.py  longbench_compare.py  quick_compare.py  strategy_compare.py  system_prompt.txt  test_prompt.json
systems/s1-cost/benchmark/results/: compression_results.json  longbench_results.json  strategy_results.json
systems/s1-cost/cli/: __main__.py  chat.py  commands.py  session.py
systems/s1-cost/digest/: __main__.py  dedup.py  feeds.py  main.py  report.py  scoring.py  summarizer.py
systems/s1-cost/digest/sources/: rss.py
systems/s1-cost/digest/tests/: test_dedup.py  test_report.py
systems/s1-cost/docs/: model-selection-matrix.md
systems/s1-cost/experiment/: data_exporter.py  metrics_collector.py
systems/s1-cost/infra/: app.py  cdk.json
systems/s1-cost/infra/stacks/: monitoring_stack.py
systems/s1-cost/infra/tests/: test_monitoring_stack.py
systems/s1-cost/strategies/: batch_processing.py  model_routing.py  prompt_caching.py
systems/s1-cost/strategies/compression/: llmlingua_compressor.py  manual_refiner.py  relevance_filter.py  semantic_summarizer.py  structure_optimizer.py
systems/s1-cost/testing/: BENCHMARK_RESULTS_SUMMARY.md  README.md  TESTING_STRATEGY_ANALYSIS.md  analyze_results.py  comprehensive_test_suite.py  compression_benchmark.py  cost_estimator.py  expanded_cost_estimator.py  requirements.txt  run_benchmark.py
systems/s1-cost/testing/benchmark_results/: advanced_manual_refiner_results.json  advanced_relevance_filter_results.json  advanced_structure_optimizer_results.json  benchmark_report.md  comprehensive_benchmark_results.json  context_aware_summarizer_results.json  llmlingua_compressor_results.json  manual_refiner_results.json  relevance_filter_results.json  semantic_summarizer_results.json  strategy_comparison.csv  (+1 more)
systems/s1-cost/utils/: bedrock.py  config.py  cost_explorer.py  metrics.py
(+6 files in other folders)
