[project]
name = "aisa-w11-bedrock-optimization"
version = "0.1.0"
description = "AISA Week 11 - Bedrock Optimization Strategies Implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.63",
    "datasets>=4.7.0",
    "llmlingua>=0.2.2",
    "rouge-score>=0.1.2",
]
