[project]
name = "aisa-w11-bedrock-optimization"
version = "0.1.0"
description = "AISA Week 11 - Bedrock Optimization Strategies Implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.63",
    "datasets>=4.7.0",
    "llmlingua>=0.2.2",
    "rouge-score>=0.1.2",
    "aws-cdk-lib>=2.180.0",
    "constructs>=10.0.0",
    "aiohttp>=3.9.0",
    "trafilatura>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
